[jOOQ/jOOQ#11788] Add QualifiedRecord and RecordQualifier to unify the Table|UDT and TableRecord|UDTRecord type hierarchy
This helps better implement Oracle %ROWTYPE support see [jOOQ/jOOQ#7863]